'style' fixes